--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   background: transparent;
 }
 
-h1, h2, p {
+h1, h2 {
   color: #FFFFFF !important;
 }
 
@@ -50,32 +50,37 @@ hr {
   background-color: #212121;
 }
 
+.card {
+  background-color: #8BC34A;
+  color: #002;
+}
+
 /* CARD IMAGE */
 
 
-.card-img {
-  height: 300px;
-  opacity: 0.6;
+.card {
+  /*height: 300px;*/
+  /*opacity: 0.6;*/
   transition: transform .25s ease;
 }
 
-.card-img:hover {
+.card:hover {
   cursor: pointer;
-  opacity: 1;
+  /*opacity: 1;*/
   transform: scale(1.05, 1.05);
 }
 
 .card-img-reverse {
-  height: 300px;
-  opacity: 0.6;
+  /*height: 300px;*/
+  /*opacity: 0.6;*/
   transform: rotate(180deg);
   transition: transform .25s ease;
 }
 
 .card-img-reverse:hover {
   cursor: pointer;
-  opacity: 1;
-  transform: scale(1.05, 1.05);
+  /*opacity: 1;*/
+  /*transform: scale(1.05, 1.05);*/
 }
 
 /* MODAL */
@@ -88,4 +93,5 @@ hr {
   letter-spacing: 0.05rem;
   line-height: 1.7rem;
   width: 75%;
+  color: #fff !important;
 }
